# simulator

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
3rd/: CMakeLists.txt  readme.md
cloth/robe/: robe.mtl
include/: FreeImage.h
pose/: body.mtl
resources/cloth/dress2/: dress2_dense.mtl
resources/cloth/dress3/: dress3_dense.mtl
resources/cloth/vest/: vest.mtl
src/: GLSLShader.cpp  GLSLShader.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Ray.cpp  Ray.h  Utilities.cpp  Utilities.h  common.h  kdtree.cpp  kdtree.h  main.cpp  scene.cpp  scene.h  sim_parameter.h  simulation.cu  simulator.h  spring.cpp  spring.h  vao_buffer.h  verlet.cu  watch.h  wglew.h
src/bvh/: bbox.cpp  bbox.h  bvh.cu  bvh.h  cudaBRT.cpp  cudaBRT.cu  cudaBRT.h  primitive.cu  primitive.h
src/shaders/: render.frag  render.vert  sh.frag  sh.vert
